# UTF-8

./: .gitignore  CMakeLists.txt  README.md
include/UTF8/: utf8.hpp
src/: utf8.cpp
tests/: CMakeLists.txt  utf8-tests.cpp
